--- a/test_font/test_font.vcxproj
+++ b/test_font/test_font.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{964C550A-A9F8-4A7F-8385-7E4B934AC200}</ProjectGuid>
     <RootNamespace>test_font</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
+    <ProjectName>ttfx</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
